# ocr_devnagri

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: deploy.yml
data/: annotation_mapping.json  api_usage.json  metrics_history.json  speakers_check.txt
data/llm_parsed_clean/: page_001.json  page_002.json  page_003.json  page_004.json  page_005.json  page_006.json  page_007.json  page_008.json  page_009.json  page_010.json  page_011.json  page_012.json  page_013.json  page_014.json  page_015.json  page_016.json  page_017.json  page_018.json  page_019.json  page_020.json  page_021.json  page_022.json  page_023.json  page_024.json  page_025.json  page_026.json  page_027.json  page_028.json  page_029.json  page_030.json  page_031.json
docs/: DATASET.md  MODEL.md  OCR_SPEC.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
scripts/: LLM_PIPELINE_README.md  build_llm_prompt.py  check_token_count.py  check_tracker.py  create_ner_example_page_002.py  create_ner_example_page_003.py  create_ner_examples.py  full_pdf_pipeline.py  generate_frontend_json.py  index_ocr_page.py  init_tracker.py  llm_parser.py  llm_prompt_template.txt  llm_prompt_template_v2.txt  ner_indexer.py  ner_llm_parser.py  parse_debates.py  postprocess_segments.py  run_llm_pipeline.py  run_ner_pipeline.py
scripts/llm_examples/: page_009_input.txt  page_009_output.json  page_010_input.txt  (+1 more)
src/: __init__.py  app.py
templates/: index.html
tests/: test_db.py  test_metrics.py  test_pdf.py
(+25 files in other folders)
