[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ocr-devnagri"
version = "0.1.0"
description = "Open-source Devanagari OCR and annotation platform"
authors = [{name = "Your Name", email = "your.email@example.com"}]
requires-python = ">=3.10"
dependencies = [
    "pymupdf>=1.23.0",
    "flask>=2.0.0",
    "jiwer>=3.0.0",
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "pillow>=10.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
]

[tool.uv.pip]
extra-index-url = []
